--- a/index.html
+++ b/index.html
@@ -19,56 +19,81 @@
 	</header>
 	<main>
 		<section id="services">
-			<h2>Services</h2>
-			<ul>
-				<li>
-					<h3>Server Configuration and Administration</h3>
-					<p>Let me take care of your server setup and management needs. I have experience with a variety of operating systems and server software, including:</p>
-					<ul>
-						<li>Linux (Ubuntu, Debian, CentOS)</li>
-						<li>Apache, Nginx</li>
-						<li>MySQL, PostgreSQL</li>
-						<li>PHP, Node.js, Python</li>
-						<li>Docker, Kubernetes</li>
-					</ul>
-				</li>
-				<li>
-					<h3>Security and Backup Solutions</h3>
-					<p>Protect your data and ensure business continuity with my security and backup services. I can:</p>
-					<ul>
-						<li>Implement firewall rules and security best practices</li>
-						<li>Set up automated backup and disaster recovery processes</li>
-						<li>Perform regular security audits and vulnerability assessments</li>
-						<li>Provide security training and education for your team</li>
-					</ul>
-				</li>
-				<li>
-					<h3>Cloud Computing and Infrastructure</h3>
-					<p>Take advantage of the scalability and flexibility of cloud computing with my infrastructure services. I can:</p>
-					<ul>
-						<li>Design and deploy cloud-based solutions using AWS, Azure, or Google Cloud Platform</li>
-						<li>Optimize cloud infrastructure for cost and performance</li>
-						<li>Monitor and manage cloud-based applications and services</li>
-						<li>Provide training and consulting on cloud technologies</li>
-					</ul>
-				</li>
-			</ul>
-		</section>
-		<section id="contact">
-			<h2>Contact</h2>
-			<form action="submit-form.php" method="post">
-				<label for="name">Name:</label>
-				<input type="text" id="name" name="name" required>
+  <h2>Services</h2>
+  <ul>
+    <li>
+      <h3>Server Configuration and Administration</h3>
+      <p>Let me take care of your server setup and management needs. I have experience with a variety of operating systems and server software, including:</p>
+      <ul>
+        <li>Linux (Ubuntu, Debian, CentOS) and Windows</li>
+        <li>Apache, Nginx</li>
+        <li>MySQL, PostgreSQL</li>
+        <li>PHP, Node.js, Python</li>
+        <li>Docker</li>
+      </ul>
+    </li>
+    <li>
+      <h3>Security and Backup Solutions</h3>
+      <p>Protect your data and ensure business continuity with my security and backup services. I can:</p>
+      <ul>
+        <li>Implement firewall rules and security best practices</li>
+        <li>Set up automated backup and disaster recovery processes</li>
+        <li>Configure SSL certificates</li>
+        <li>Install security updates and firmware updates</li>
+      </ul>
+    </li>
+    <li>
+      <h3>Cloud Computing and Infrastructure</h3>
+      <p>Take advantage of the scalability and flexibility of cloud computing with my infrastructure services. I can:</p>
+      <ul>
+        <li>Design and deploy cloud-based solutions using AWS, Azure, or Google Cloud Platform</li>
+        <li>Optimize cloud infrastructure for cost and performance</li>
+        <li>Monitor and manage cloud-based applications and services</li>
+        <li>Provide consulting on cloud technologies</li>
+      </ul>
+    </li>
+    <li>
+      <h3>Physical Service Configuration (On-site or Remote)</h3>
+      <p>Get your hardware set up and configured for optimal performance. I can:</p>
+      <ul>
+        <li>Set up servers, switches, and other network devices</li>
+        <li>Configure load balancers and DNS servers</li>
+        <li>Install and configure web servers (Apache, Nginx, IIS)</li>
+        <li>Set up and manage mail servers (Zimbra)</li>
+        <li>Install and configure virtualization software</li>
+      </ul>
+    </li>
+    <li>
+      <h3>Scripting and Automation</h3>
+      <p>Streamline your operations and improve efficiency with my scripting and automation services. I can:</p>
+      <ul>
+        <li>Write and maintain Bash and PowerShell scripts</li>
+        <li>Implement automation tools like Ansible</li>
+      </ul>
+    </li>
+    <ul>
+    <li>
+      <h3>Windows Server Administration</h3>
+      <p>Get the most out of your Windows infrastructure with my Windows Server Administration services. I can:</p>
+      <ul>
+        <li>Configure and manage Windows Active Directory</li>
+        <li>Set up and manage Microsoft Exchange and Office 365 solutions</li>
+        <li>Install security updates and firmware updates</li>
+      </ul>
+    </li>
+  </ul>		
+      <li>
+      <h3>Capacity Planning and Performance Optimization</h3>
+      <p>Ensure your infrastructure can handle the demands of your business. I can:</p>
+      <ul>
+        <li>Analyze your existing infrastructure and identify performance bottlenecks</li>
+        <li>Provide recommendations for hardware and software upgrades</li>
+        <li>Optimize server configurations for maximum performance</li>
+        <li>Configure caching solutions to improve website and application performance</li>
+      </ul>
+    </li>
+</section>
 
-				<label for="email">Email:</label>
-				<input type="email" id="email" name="email" required>
-
-				<label for="message">Message:</label>
-				<textarea id="message" name="message" required></textarea>
-
-				<input type="submit" value="Send">
-			</form>
-		</section>
 	</main>
 	<footer>
 		<p>&copy; Your Name Here | Freelance System Admin</p>
