--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
       <p>Get your hardware set up and configured for optimal performance. I can:</p>
       <ul>
         <li>Set up servers, switches, and other network devices</li>
-        <li>Configure load balancers and DNS servers</li>
+        <li>Configure load balancers and DNS servers (BIND, PowerDNS, Knot)</li>
+	<li>Configure monitoring tools (Nagios, Zabbix, Graphana)</li>
         <li>Install and configure web servers (Apache, Nginx, IIS)</li>
         <li>Set up and manage mail servers (Zimbra)</li>
-        <li>Install and configure virtualization software</li>
+        <li>Install and configure virtualization software(Vmware Esxi, Hyper-v, Proxmox)</li>
       </ul>
     </li>
     <li>
@@ -78,7 +79,7 @@
       <ul>
         <li>Configure and manage Windows Active Directory</li>
         <li>Set up and manage Microsoft Exchange and Office 365 solutions</li>
-        <li>Install security updates and firmware updates</li>
+        <li>Install security patches and firmware updates</li>
       </ul>
     </li>
   </ul>		
@@ -96,7 +97,7 @@
 
 	</main>
 	<footer>
-		<p>&copy; Your Name Here | Freelance System Admin</p>
+		<p>&copy; Saugat Nepal - Prosaugat | Freelance System Admin</p>
 	</footer>
 </body>
 </html>
