--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Freelance System Admin | Your Name Here</title>
 	<link rel="stylesheet" href="style.css">
+ 	<link rel="stylesheet" href="styles.css">
+  	<script src="scripts.js"></script>
+
 </head>
 <body>
 	<header>
 		<h1>Freelance System Admin</h1>
-		<h2>Your Name Here</h2>
+		<h2>ProSaugat</h2>
 		<nav>
 			<ul>
 				<li><a href="#services">Services</a></li>
