--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Freelance System Admin | Your Name Here</title>
+	<title>Freelance System Admin | ProSaugat</title>
 	<link rel="stylesheet" href="style.css">
  	<link rel="stylesheet" href="styles.css">
   	<script src="scripts.js"></script>
@@ -15,6 +15,7 @@
 		<h2>ProSaugat</h2>
 		<nav>
 			<ul>
+				<li><a href="#about">Services</a></li>
 				<li><a href="#services">Services</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -25,11 +26,15 @@
   <h2>Services</h2>
   <ul>
     <li>
-      <h3>Server Configuration and Administration</h3>
+      <h3>Server Configuration and Administration (On-site or Remote</h3>
       <p>Let me take care of your server setup and management needs. I have experience with a variety of operating systems and server software, including:</p>
       <ul>
-        <li>Linux (Ubuntu, Debian, CentOS) and Windows</li>
-        <li>Apache, Nginx</li>
+        <li>Set up Linux (CentOS, Ubuntu, Debian, Oracle ) and Windows  Server</li>
+        <li>Configure load balancers with keepalived and DNS servers (BIND, PowerDNS, Knot)</li>
+	<li>Configure and manage Windows Active Directory</li>
+	<li>Configure monitoring tools (Nagios, Zabbix, Graphana)</li>
+        <li>Install and configure web servers (Apache, Nginx, IIS)</li>
+        <li>Set up and manage mail servers (Zimbra)</li>
         <li>MySQL, PostgreSQL</li>
         <li>PHP, Node.js, Python</li>
         <li>Docker</li>
@@ -56,32 +61,19 @@
       </ul>
     </li>
     <li>
-      <h3>Physical Service Configuration (On-site or Remote)</h3>
+      <h3>Physical Service Configuration (On-site or Remote Support)</h3>
       <p>Get your hardware set up and configured for optimal performance. I can:</p>
       <ul>
-        <li>Set up servers, switches, and other network devices</li>
-        <li>Configure load balancers and DNS servers (BIND, PowerDNS, Knot)</li>
-	<li>Configure monitoring tools (Nagios, Zabbix, Graphana)</li>
-        <li>Install and configure web servers (Apache, Nginx, IIS)</li>
-        <li>Set up and manage mail servers (Zimbra)</li>
-        <li>Install and configure virtualization software(Vmware Esxi, Hyper-v, Proxmox)</li>
+	<li>Set up physical servers, switches, firewalls and other network devices</li>
+	<li>Install and configure virtualization softwares/hypervisor(Vmware Esxi, Nutanix, Hyper-v, Proxmox)</li>
       </ul>
     </li>
     <li>
       <h3>Scripting and Automation</h3>
       <p>Streamline your operations and improve efficiency with my scripting and automation services. I can:</p>
       <ul>
-        <li>Write and maintain Bash and PowerShell scripts</li>
+        <li>Write and maintain powerful Bash and PowerShell scripts</li>
         <li>Implement automation tools like Ansible</li>
-      </ul>
-    </li>
-    <li>
-      <h3>Windows Server Administration</h3>
-      <p>Get the most out of your Windows infrastructure with my Windows Server Administration services. I can:</p>
-      <ul>
-        <li>Configure and manage Windows Active Directory</li>
-        <li>Set up and manage Microsoft Exchange and Office 365 solutions</li>
-        <li>Install security patches and firmware updates</li>
       </ul>
     </li>		
       <li>
