--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Freelance System Admin | ProSaugat</title>
 	<link rel="stylesheet" href="style.css">
- 	<link rel="stylesheet" href="styles.css">
   	<script src="scripts.js"></script>
 
 </head>
 <body>
 	<header>
 		<h1>Freelance System Admin</h1>
-		<h2>ProSaugat</h2>
+		<h2>Saugat Nepal</h2>
 		<nav>
 			<ul>
 				<li><a href="#about">Services</a></li>
