--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 		</nav>
 	</header>
 	<main>
+		
+		<section id="about">
+  <h2>About Me</h2>
+  <p>I am a experienced system administrator with expertise in a wide range of technologies. My mission is to provide reliable and efficient solutions to clients, no matter how complex their needs may be.</p>
+</section>
 		<section id="services">
   <h2>Services</h2>
   <ul>
@@ -86,7 +91,22 @@
       </ul>
     </li>
 </section>
+			
+<section id="contact">
+  <h2>Contact Us</h2>
+  <form>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
 
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" required></textarea>
+
+    <button type="submit">Send Message</button>
+  </form>
+</section>
 	</main>
 	<footer>
 		<p>&copy; Saugat Nepal - Prosaugat | Freelance System Admin</p>
