--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h2>Saugat Nepal</h2>
 		<nav>
 			<ul>
-				<li><a href="#about">Services</a></li>
+				<li><a href="#about">About</a></li>
 				<li><a href="#services">Services</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
