--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 	<header>
-		<h1>Freelance System Admin</h1>
-		<h2>Saugat Nepal</h2>
+		<h1> <center>Freelance System Admin - Saugat Nepal</center></h1>
 		<nav>
 			<ul>
 				<li><a href="#about">About</a></li>
