--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </section>
 	</main>
 	<footer>
-		<p>&copy; Saugat Nepal - Prosaugat | Freelance System Admin</p>
+		<p><center>&copy; 2023 Saugat Nepal - Prosaugat | Freelance System Admin</center></p>
 	</footer>
 </body>
 </html>
