--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h1> <center>Freelance System Admin - Saugat Nepal</center></h1>
 		<nav>
 			<ul>
-				<li><a href="#about">About</a></li>
+				<a href="#about">About</a>
 				<li><a href="#services">Services</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -92,7 +92,7 @@
 </section>
 			
 <section id="contact">
-  <h2>Contact Us</h2>
+  <h2>Contact Me</h2>
   <form>
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
