--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<header>
 		<h1> <center>Freelance System Admin - Saugat Nepal</center></h1>
 		<nav>
+			<center> <b> <h4> <a href="#about">About</a> </b> </h4> </center>
 			<ul>
 				<a href="#about">About</a>
 				<li><a href="#services">Services</a></li>
