--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 	<header>
 		<h1> <center>Freelance System Admin - Saugat Nepal</center></h1>
-		<nav>
 			<center> <b> <h4> <a href="#about">About</a> </b> </h4> </center>
-			<ul>
-				<a href="#about">About</a>
+		<nav>	
+		<ul>
+				<li><a href="#about">About</a></li>
 				<li><a href="#services">Services</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
