--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
 <body>
 	<header>
 		<h1> <center>Freelance System Admin - Saugat Nepal</center></h1>
-			<center> <b> <h4> <a href="#about">About</a> </b> </h4> </center>
-		<nav>	
-		<ul>
-				<li><a href="#about">About</a></li>
-				<li><a href="#services">Services</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
+		<center> <b> <h4> <a href="#about">About</a> <a href="#services">Services</a> <a href="#contact">Contact</a> </b> </h4> </center>
 	</header>
 	<main>
 		
