--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<h1> <center>Freelance System Admin - Saugat Nepal</center></h1>
-		<center> <b> <h4> <a href="#about">About</a> <a href="#services">Services</a> <a href="#contact">Contact</a> </b> </h4> </center>
+		<center> <b> <h4> <a href="#about">About</a> | <a href="#services">Services</a> | <a href="#contact">Contact</a> </b> </h4> </center>
 	</header>
 	<main>
 		
