--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <label for="message">Message:</label>
     <textarea id="message" name="message" required></textarea>
 
-    <button type="submit">Send Message</button>
+	  <center><button type="submit">Send Message</button></center>
   </form>
 </section>
 	</main>
