--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li>Implement firewall rules and security best practices</li>
         <li>Set up automated backup and disaster recovery processes</li>
         <li>Configure SSL certificates</li>
-        <li>Install security updates and firmware updates</li>
+        <li>Install security patches and firmware updates</li>
       </ul>
     </li>
     <li>
