--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
   <h2>Services</h2>
   <ul>
     <li>
-      <h3>Server Configuration and Administration (On-site or Remote</h3>
+      <h3>Server Configuration and Administration (On-site or Remote)</h3>
       <p>Let me take care of your server setup and management needs. I have experience with a variety of operating systems and server software.I can:</p>
       <ul>
         <li>Set up Linux (CentOS, Ubuntu, Debian, Oracle) and Windows  Server</li>
         <li>Configure load balancers with keepalived and DNS servers (BIND, PowerDNS, Knot)</li>
+	<li>Install and Configure DNS servers (BIND, PowerDNS, Knot)</li>
 	<li>Configure and manage Windows Active Directory</li>
 	<li>Configure monitoring tools (Nagios, Zabbix, Graphana)</li>
         <li>Install and configure web servers (Apache, Nginx, IIS)</li>
@@ -62,7 +63,7 @@
       <p>Get your hardware set up and configured for optimal performance. I can:</p>
       <ul>
 	<li>Set up physical servers, switches, firewalls and other network devices</li>
-	<li>Install and configure virtualization softwares/hypervisor(Vmware Esxi, Nutanix, Hyper-v, Proxmox)</li>
+	<li>Install and configure virtualization softwares/hypervisor (Vmware Esxi, Nutanix, Hyper-v, Proxmox)</li>
       </ul>
     </li>
     <li>
