--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>Let me take care of your server setup and management needs. I have experience with a variety of operating systems and server software.I can:</p>
       <ul>
         <li>Set up Linux (CentOS, Ubuntu, Debian, Oracle) and Windows  Server</li>
-        <li>Configure load balancers with keepalived and DNS servers (BIND, PowerDNS, Knot)</li>
+        <li>Configure load balancers with keepalived</li>
 	<li>Install and Configure DNS servers (BIND, PowerDNS, Knot)</li>
 	<li>Configure and manage Windows Active Directory</li>
 	<li>Configure monitoring tools (Nagios, Zabbix, Graphana)</li>
