--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 	<li>Configure monitoring tools (Nagios, Zabbix, Graphana)</li>
         <li>Install and configure web servers (Apache, Nginx, IIS)</li>
         <li>Set up and manage mail servers (Zimbra)</li>
-        <li>MySQL, PostgreSQL</li>
+        <li>MySQL, MariaDB, PostgreSQL</li>
         <li>PHP, Node.js, Python</li>
-        <li>Docker</li>
+        <li>Setup Docker, Kubernetes</li>
       </ul>
     </li>
     <li>
