--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 	<title>Freelance System Admin | ProSaugat</title>
 	<link rel="stylesheet" href="style.css">
   	<script src="scripts.js"></script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5NVPKS1DHN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5NVPKS1DHN');
+</script>
 
 </head>
 <body>
